# oclus-app

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  tauri.conf.json
core/src/: lib.rs  main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
ui/src/: app.html
ui/src/routes/: +layout.js
