[package]
name = "oclus-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "oclus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
